# randar

./: .gitignore  Cargo.toml  PKGBUILD  README.md  randlas-0.1.1-1-x86_64.pkg.tar.zst  randlas-debug-0.1.1-1-x86_64.pkg.tar.zst
pkg/randlas/: .BUILDINFO  .MTREE  .PKGINFO
pkg/randlas-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: args.rs  lidar.rs  main.rs
