[package]
name = "randar"
version = "0.1.0"
authors = ["Adam Subora <adam.subora@proton.me>"]
edition = "2021"
repository = "https://github.com/asub-sandwich/randar"
description = "A program to generate random lidar files. Intended for use in testing different lidar storage and compression algorithms. Output lidar files are technically valid according to ASPRS specification, but may offer `worst case scenario` for some compression algorithms because of the randomness."

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.7.5"
las = { version = "0.9.3", features = ["laz-parallel"] }
rand = "0.9.0"
tqdm = "0.7.0"
