[package]
name = "randar"
version = "0.1.1"
authors = ["Adam Subora <adam.subora@proton.me>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/asub-sandwich/randar"
description = "A program to generate random lidar files."
keywords = ["lidar", "las", "laz"]
categories = ["command-line-utilities", "science", "science::geo", "simulation"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
indicatif = "0.17.11"
inquire = "0.7.5"
las = { version = "0.9.3", features = ["laz-parallel"] }
noise = "0.9.0"
rand = "0.9.0"
